<resources>
    <string name="app_name">Activity_5</string>
    <string name="lEmail">Email</string>
    <string name="lPassword">Password</string>
    <string name="lSign">SIGN-IN</string>
    <string name="logo1">logo</string>

    <string name="lihatdata">Lihat Data</string>
    <string name="editdata">Edit Data</string>
    <string name="datakontak">Data Kontak</string>
    <string name="namaitem">Nama Item</string>
    <string name="detailkontak">Detail Kontak</string>
    <string name="nama">Nama</string>
    <string name="notelp">Nomor Telpon</string>


</resources>